// Code generated by j5convert. DO NOT EDIT.

syntax = "proto3";

package o5.ges.v1.service;

import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "o5/ges/v1/events.j5s.proto";

service QueryService {
  rpc EventsList(EventsListRequest) returns (EventsListResponse) {
    option (google.api.http) = {get: "/ges/v1/events"};
  }

  rpc UpsertList(UpsertListRequest) returns (UpsertListResponse) {
    option (google.api.http) = {get: "/ges/v1/upsert"};
  }
}

message EventsListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message EventsListResponse {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageResponse page = 1 [(j5.ext.v1.field).object = {}];

  repeated o5.ges.v1.Event events = 2 [(j5.ext.v1.field).array = {}];
}

message UpsertListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message UpsertListResponse {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageResponse page = 1 [(j5.ext.v1.field).object = {}];

  repeated o5.ges.v1.Upsert events = 2 [(j5.ext.v1.field).array = {}];
}
